# tactica

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
calculations/src/: movements.cpp
docs/: tactica.md
engine-core/: CMakeLists.txt  Cargo.toml  build.rs
engine-core/src/: lib.rs  main.rs
engine-sentinel/: Cargo.toml  build.rs
engine-sentinel/src/: lib.rs  main.rs
engine-sentinel/src/binds/: mod.rs
